# mule_slant

./: CMakeLists.txt  LICENSE  README.md
core_experiments/BIKES/: slant_BIKES_0.005_decode.conf  slant_BIKES_0.005_encode.conf  slant_BIKES_0.02_decode.conf  slant_BIKES_0.02_encode.conf  slant_BIKES_0.1_decode.conf  slant_BIKES_0.1_encode.conf  slant_BIKES_0.75_decode.conf  slant_BIKES_0.75_encode.conf
core_experiments/DANGER/: slant_DANGER_0.005_decode.conf  slant_DANGER_0.005_encode.conf  slant_DANGER_0.02_decode.conf  slant_DANGER_0.02_encode.conf  slant_DANGER_0.05_encode.conf  slant_DANGER_0.1_decode.conf  slant_DANGER_0.1_encode.conf  slant_DANGER_0.75_decode.conf  slant_DANGER_0.75_encode.conf
core_experiments/FOUNTAIN/: slant_FOUNTAIN_0.005_decode.conf  slant_FOUNTAIN_0.005_encode.conf  slant_FOUNTAIN_0.02_decode.conf  slant_FOUNTAIN_0.02_encode.conf  slant_FOUNTAIN_0.05_encode.conf  (+4 more)
src/: ABACoder.cpp  ABACoder.h  ABADecoder.cpp  ABADecoder.h  Block4D.cpp  Block4D.h  IntegerString.cpp  IntegerString.h  LightField.cpp  LightField.h  Matrix.cpp  Matrix.h  MultiscaleTransform.cpp  MultiscaleTransform.h  ProbabilityModel.cpp  ProbabilityModel.h  View.cpp  View.h
src/decoder/: CMakeLists.txt  Hierarchical4DDecoder.cpp  Hierarchical4DDecoder.h  PartitionDecoder.cpp  PartitionDecoder.h  SlantHierarchyDecoder.cpp  SlantHierarchyDecoder.h  dec_padding.cpp  decoder.cpp
src/encoder/: CMakeLists.txt  Hierarchical4DEncoder.cpp  Hierarchical4DEncoder.h  SlantHierarchy.cpp  SlantHierarchy.h  TransformPartition.cpp  TransformPartition.h  encoder.cpp
(+53 files in other folders)
